cp: 	PR c++/19884 	* pt.c (check_explicit_specialization): Make sure namespace 	binding lookup found an overloaded function. 	(lookup_template_function): Just assert FNS is an overloaded 	function.

PR c++/19895
	* decl.c (grokdeclarator): Check for error mark node in ptrmem
	construction.
testsuite:
	PR c++/19895
	* g++.dg/parse/ptrmem3.C: New.

	PR c++/19884
	* g++.old-deja/g++.oliva/template6.C: Add another case.
	* g++.dg/template/explicit6.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95009 138bc75d-0d04-0410-961f-82ee72b054a4